Moved @tryghost/session-service to core folder
fix https://linear.app/ghost/issue/ENG-2097/session-service

- this commit moves the lib code and tests to the core folder so we can
  colocate code in one place rather than splitting it out across
  packages, which increases the cognitive load and overhead
- this also updates translations because the signin email is now
  detected and the keys should be added to the JSON files

--- a/ghost/i18n/locales/context.json
+++ b/ghost/i18n/locales/context.json
@@ -69,6 +69,7 @@
     "Deleted": "Shown when a member deletes a comment",
     "Deleted member": "Name of a member used for comments when the member has been deleted",
     "Deleting": "Shown while a comment deletion is in progress",
+    "Device:": "",
     "Didn't mean to do this? Manage your preferences <button>here</button>.": "Message shown after unsubscribing from a newsletter",
     "Discussion": "Short default title for the comments section used on smaller devices",
     "Don't have an account?": "A link on the login screen, directing people who do not yet have an account to sign up.",
@@ -100,6 +101,7 @@
     "Failed to update billing information, please try again": "error message",
     "Failed to update newsletter settings": "error message",
     "Failed to update subscription, please try again": "error message",
+    "For security verification, enter the code below to sign in to {{siteTitle}}:": "",
     "For your security, the link will expire in 24 hours time.": "Descriptive text in emails about authentication links",
     "Forever": "Label for a discounted price which has no expiry date",
     "Founder @ Acme Inc": "Placeholder value for the input box when editing your expertise",
@@ -112,6 +114,7 @@
     "Head of Marketing at Acme, Inc": "Example of an expertise of a person used in comments when editing your expertise",
     "Help! I'm not receiving emails": "A section title in email receiving FAQ",
     "Here are a few other sites you may enjoy.": "Text introducing related sites someone may find interesting",
+    "Here's your code to login to {{siteTitle}}": "",
     "Hey there!": "An introduction/opening to an email",
     "Hey there,": "An introduction/opening to an email",
     "Hidden for members": "Shown to moderators when a comment is hidden from members",
@@ -122,6 +125,7 @@
     "If you cancel your subscription now, you will continue to have access until {{periodEnd}}.": "Message explaining when a subscription will end if cancelled",
     "If you did not make this request, you can safely ignore this email.": "Footer text in signup/login emails",
     "If you did not make this request, you can simply delete this message.": "Footer text in signup/login emails",
+    "If you didn't try to sign in recently, you can safely ignore this email to deny access.": "",
     "If you have a corporate or government email account, reach out to your IT department and ask them to allow emails to be received from {{senderEmail}}": "Paragraph in the email receiving FAQ",
     "If you would like to start receiving emails again, the best next steps are to check your email address on file for any issues and then click resubscribe on the previous screen.": "Paragraph in the email suppression FAQ",
     "If you're not receiving the email newsletter you've subscribed to, here are a few things to check.": "Paragraph in the email receiving FAQ",
@@ -201,6 +205,7 @@
     "Show {{amount}} more replies": "Button text to load more replies for a comment",
     "Sign in": "A button to sign in",
     "Sign in to {{siteTitle}}": "The title displayed on the login screen",
+    "Sign in verification": "",
     "Sign out": "A button to sign out",
     "Sign up": "A button to sign up",
     "Sign up now": "Button text to sign up in order to post a comment",
@@ -282,6 +287,8 @@
     "Welcome back, {{name}}!": "A personalised message when a user has logged in successfully",
     "Welcome to {{siteTitle}}": "Greeting to user on recommendation page",
     "When an inbox fails to accept an email it is commonly called a bounce. In many cases, this can be temporary. However, in some cases, a bounced email can be returned as a permanent failure when an email address is invalid or non-existent.": "A paragraph from the email suppression FAQ",
+    "When:": "",
+    "Where:": "",
     "Why has my email been disabled?": "A section title from the email suppression FAQ",
     "Yearly": "A label indicating an annual payment cadence",
     "Yesterday": "Time a comment was placed",
@@ -289,6 +296,7 @@
     "You can also copy & paste this URL into your browser:": "Descriptive text displayed underneath the buttons in login/signup emails, right before authentication URLs which can be copy/pasted",
     "You currently have a free membership, upgrade to a paid subscription for full access.": "A message indicating that the member is using a free subcription, and could access more content with a paid subscription",
     "You have been successfully resubscribed": "A confirmation message when a member has had emails turned off, but they have been successfully turned back on",
+    "You just tried to access your account from a new device.": "",
     "You will not be signed up, and no account will be created for you.": "Descriptive text in signup emails indicating that if someone does NOT click on the confirmation button, then they will not be signed up to anything. This text is intended to reassure people who receive a signup confirmation email that they did not ask for.",
     "You will not be subscribed.": "Descriptive text in signup emails indicating that if someone does NOT click on the confirmation button, then they will not be signed up to anything. This text is intended to reassure people who receive a signup confirmation email that they did not ask for.",
     "You're currently not receiving emails": "Message for user who have newsletters disabled",
@@ -311,6 +319,7 @@
     "Your subscription will renew on {date}.": "Appears in the newsletter footer, be sure to include {date} in the translation.",
     "Your subscription will renew on {{renewalDate}}": "A message indicating when the member's subscription will be renewed, in the portal",
     "Your subscription will start on {{subscriptionStart}}": "A message for trial users indicating when their subscription will start",
+    "Your verification code for {{siteTitle}}": "",
     "complimentary": "Will be substituted into status for 'You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.'",
     "edited": "label for an edited comment",
     "free": "Will be substituted into status for 'You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.'",
