--- a/ghost/i18n/locales/hu/ghost.json
+++ b/ghost/i18n/locales/hu/ghost.json
@@ -7,17 +7,22 @@
     "Confirm your email address": "Kérjük, erősítsd meg az e-mail-címed!",
     "Confirm your email update for {{siteTitle}}!": "{{siteTitle}} — E-mail-cím módosításának megerősítése",
     "Confirm your subscription to {{siteTitle}}": "{{siteTitle}} — Előfizetés jóváhagyása",
+    "Device:": "",
+    "For security verification, enter the code below to sign in to {{siteTitle}}:": "",
     "For your security, the link will expire in 24 hours time.": "Biztonsági okokból a link 24 órán belül érvénytelenné válik.",
+    "Here's your code to login to {{siteTitle}}": "",
     "Hey there,": "Szia!",
     "Hey there!": "Szia!",
     "If you did not make this request, you can safely ignore this email.": "Ha nem te kezdeményezted ezt a kérést, akkor nyugodtan hagyd figyelmen kívül ezt a levelet.",
     "If you did not make this request, you can simply delete this message.": "Ha nem te kezdeményezted ezt a kérést, nyugodtan töröld ezt a levelet.",
+    "If you didn't try to sign in recently, you can safely ignore this email to deny access.": "",
     "Please confirm your email address with this link:": "Kattints az alábbi linkre az e-mail-címed megerősítéséért:",
     "Secure sign in link for {{siteTitle}}": "{{siteTitle}} — Biztonságos bejelentkezési link",
     "See you soon!": "Üdv!",
     "Sent to {{email}}": "Elküldve ide: {{email}}",
     "Sign in": "Bejelentkezés",
     "Sign in to {{siteTitle}}": "Bejelentkezem ide: {{siteTitle}}",
+    "Sign in verification": "",
     "Tap the link below to complete the signup process for {{siteTitle}}, and be automatically signed in:": "Kattints az alábbi linkre a regisztráció befejezéséhez és az automatikus bejelentkezéshez:",
     "Thank you for signing up to {{siteTitle}}!": "{{siteTitle}} — Köszönjük a regisztrációt!",
     "Thank you for subscribing to {{siteTitle}}!": "{{siteTitle}} — Köszönjük a feliratkozást!",
@@ -26,9 +31,13 @@
     "This email address will not be used.": "Ezt az e-mail-címet nem használjuk fel.",
     "Welcome back to {{siteTitle}}!": "{{siteTitle}} - Üdv újra!",
     "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "Jó, hogy újra itt vagy! Kérjük, használd az alábbi linket a biztonságos bejelentkezéshez:",
+    "When:": "",
+    "Where:": "",
     "You can also copy & paste this URL into your browser:": "Ha elakadnál, másold át és nyisd meg az alábbi linket a böngésződben:",
+    "You just tried to access your account from a new device.": "",
     "You will not be signed up, and no account will be created for you.": "Nem leszel regisztrálva és saját fiók sem készül neked.",
     "You will not be subscribed.": "Nem leszel feliratkozva.",
     "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "Csak egy kattintásra vagy a feliratkozástól! Kérjük, hagyd jóvá az e-mail-címed az alábbi linkkel:",
-    "You're one tap away from subscribing to {{siteTitle}}!": "{{siteTitle}} — Csak egy kattintásra vagy a feliratkozástól!"
+    "You're one tap away from subscribing to {{siteTitle}}!": "{{siteTitle}} — Csak egy kattintásra vagy a feliratkozástól!",
+    "Your verification code for {{siteTitle}}": ""
 }
