Fix typos and update nuances

--- a/ghost/i18n/locales/mn/ghost.json
+++ b/ghost/i18n/locales/mn/ghost.json
@@ -3,9 +3,9 @@
     "Complete signup for {{siteTitle}}!": "{{siteTitle}} бүртгэлээ дуусгана уу!",
     "Complete your sign up to {{siteTitle}}!": "{{siteTitle}} бүртгэлээ дуусгана уу!",
     "Confirm email address": "Имэйл хаягаа баталгаажуулах",
-    "Confirm signup": "Бүртгүүлэхээ баталгаажуулах",
+    "Confirm signup": "Бүртгэлээ баталгаажуулах",
     "Confirm your email address": "Имэйл хаягаа баталгаажуулах",
-    "Confirm your email update for {{siteTitle}}!": "{{siteTitle}} шинэчилсэн имэйлээ баталгаажуулна уу!",
+    "Confirm your email update for {{siteTitle}}!": "{{siteTitle}} шинэчилсэн имэйл хаягаа баталгаажуулна уу!",
     "Confirm your subscription to {{siteTitle}}": "{{siteTitle}} захиалгаа баталгаажуулах",
     "Device:": "Төхөөрөмж:",
     "For security verification, enter the code below to sign in to {{siteTitle}}:": "Аюулгүй байдлын шалгалтын тулд доорх кодыг оруулан {{siteTitle}}-д нэвтэрнэ үү:",
@@ -15,7 +15,7 @@
     "Hey there!": "Сайн уу!",
     "If you did not make this request, you can safely ignore this email.": "Хэрвээ та энэхүү хүсэлтийг гаргаагүй бол энэ имэйлийг тоолгүй орхиж болно.",
     "If you did not make this request, you can simply delete this message.": "Хэрвээ та энэхүү хүсэлтийг гаргаагүй бол энэ имэйлийг устгаж болно.",
-    "If you didn't try to sign in recently, you can safely ignore this email to deny access.": "Хэрвээ та сүүлийн үед нэвтрэх оролдлого хийгээгүй бол энэ имэйлийг үл тоон орхиж болно.",
+    "If you didn't try to sign in recently, you can safely ignore this email to deny access.": "Хэрвээ та сүүлийн үед нэвтрэх оролдлого хийгээгүй бол энэ имэйлийг тоолгүй орхиж болно.",
     "Please confirm your email address with this link:": "Та өөрийн имэйл хаягаа дараах холбоосоор баталгаажуулна уу:",
     "Secure sign in link for {{siteTitle}}": "{{siteTitle}}-д нэвтрэх нууцлал бүхий холбоос",
     "See you soon!": "Удахгүй уулзацгаая!",
@@ -27,7 +27,7 @@
     "Thank you for signing up to {{siteTitle}}!": "{{siteTitle}}-д бүтргүүлсэнд баярлалаа!",
     "Thank you for subscribing to {{siteTitle}}!": "{{siteTitle}}-д захиалга өгсөнд баярлалаа!",
     "Thank you for subscribing to {{siteTitle}}.": "{{siteTitle}}-д захиалга өгсөнд баярлалаа.",
-    "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "{{siteTitle}}-д захиалга өгсөнд баярлалаа. Доох холбоосыг дарснаар автоматаар нэвтрэнэ:",
+    "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "{{siteTitle}}-д захиалга өгсөнд баярлалаа. Доорх холбоосыг дарснаар автоматаар нэвтрэнэ:",
     "This email address will not be used.": "Энэхүү имэйл хаяг ашиглагдахгүй.",
     "Welcome back to {{siteTitle}}!": "{{siteTitle}}-д тавтай морилно уу!",
     "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "Дахин тавтай морилно уу! Энэхүү холбоосыг ашиглан {{siteTitle}}-д нэвтрэнэ үү:",
