--- a/ghost/i18n/locales/mn/newsletter.json
+++ b/ghost/i18n/locales/mn/newsletter.json
@@ -1,7 +1,7 @@
 {
     "{date}": "{date}",
     "Become a paid member of {site} to get access to all premium content.": "{site}-н бүх премиум контентод хандах эрхтэй болохын тулд төлбөртэй гишүүн болно уу.",
-    "By {authors}": "Зохиогч: {authors}",
+    "By {authors}": "Нийтэлсэн: {authors}",
     "Comment": "Сэтгэгдэл",
     "complimentary": "үнэгүй",
     "Email": "Имэйл",
