Replacing with common Mongolian naming

--- a/ghost/i18n/locales/mn/comments.json
+++ b/ghost/i18n/locales/mn/comments.json
@@ -32,7 +32,7 @@
     "Hidden for members": "Гишүүдээс нуугдсан",
     "Hide": "Нуух",
     "Hide comment": "Сэтгэгдлийг нуух",
-    "Jamie Larson": "Жэйми Ларсон",
+    "Jamie Larson": "Доржийн Бат",
     "Join the discussion": "Хэлэлцүүлэгт нэгдэх",
     "Just now": "Дөнгөж сая",
     "Load more ({{amount}})": "Дахин харах ({{amount}})",
