--- a/ghost/i18n/locales/mn/newsletter.json
+++ b/ghost/i18n/locales/mn/newsletter.json
@@ -3,7 +3,7 @@
     "Become a paid member of {site} to get access to all premium content.": "{site}-н бүх премиум контентод хандах эрхтэй болохын тулд төлбөртэй гишүүн болно уу.",
     "By {authors}": "Нийтэлсэн: {authors}",
     "Comment": "Сэтгэгдэл",
-    "complimentary": "үнэгүй",
+    "complimentary": "бэлэглэсэн",
     "Email": "Имэйл",
     "free": "үнэгүй",
     "Keep reading": "Үргэлжлүүлэн унших",
