🌐 Updated Polish translation - fixes

--- a/ghost/i18n/locales/pl/comments.json
+++ b/ghost/i18n/locales/pl/comments.json
@@ -46,7 +46,7 @@
     "removed": "usunięte",
     "Replied to": "Odpowiedziano do",
     "Reply": "Odpowiedz",
-    "Reply to": "Odpowiedź do",
+    "Reply to": "Odpowiedz na",
     "Reply to comment": "Napisz odpowiedź do komentarza",
     "Report": "Zgłoś",
     "Report comment": "Zgłoś komentarz",
