--- a/ghost/i18n/locales/pl/newsletter.json
+++ b/ghost/i18n/locales/pl/newsletter.json
@@ -24,5 +24,5 @@
     "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "Twoja subskrypcja została anulowana i wygaśnie w dniu {date}. Możesz wznowić subskrypcję w ustawieniach swojego konta.",
     "Your subscription has expired.": "Twoja subskrypcja wygasła",
     "Your subscription will expire on {date}.": "Twoja subskrypcja wygaśnie w dniu {date}",
-    "Your subscription will renew on {date}.": "Twoja subskrypcja zostanie automatycznie odnowiona w dniu {data}"
+    "Your subscription will renew on {date}.": "Twoja subskrypcja zostanie automatycznie odnowiona w dniu {date}"
 }
