🌐 Updated Italian translations for Comments, Ghost, Newsletter, Portal
- Adding missing strings
- Replaced curly apostrophes with straight single quotes
- Other tweaks improve the accuracy of the translations

--- a/ghost/i18n/locales/it/comments.json
+++ b/ghost/i18n/locales/it/comments.json
@@ -10,14 +10,14 @@
     "Add reply": "Aggiungi risposta",
     "Already a member?": "Sei già iscritto?",
     "Anonymous": "Anonimo",
-    "Are you sure?": "",
+    "Are you sure?": "Sei sicuro?",
     "Become a member of {{publication}} to start commenting.": "Iscriviti a {{publication}} per poter commentare.",
     "Become a paid member of {{publication}} to start commenting.": "Abbonati a {{publication}} per poter commentare.",
     "Cancel": "Annulla",
     "Comment": "Commenta",
     "Complete your profile": "Completa il tuo profilo",
     "Delete": "Elimina",
-    "Deleted": "",
+    "Deleted": "Cancellato",
     "Deleted member": "Utente eliminato",
     "Deleting": "",
     "Discussion": "Discussione",
