--- a/ghost/i18n/locales/it/newsletter.json
+++ b/ghost/i18n/locales/it/newsletter.json
@@ -8,7 +8,7 @@
     "free": "gratuito",
     "Keep reading": "Continua a leggere",
     "Less like this": "Non mi piace",
-    "Manage subscription": "Gestisci l’abbonamento",
+    "Manage subscription": "Gestisci l'abbonamento",
     "Member since": "Abbonato dal",
     "More like this": "Mi piace",
     "Name": "Nome",
