--- a/ghost/i18n/locales/it/portal.json
+++ b/ghost/i18n/locales/it/portal.json
@@ -10,7 +10,7 @@
     "{{memberEmail}} will no longer receive emails when someone replies to your comments.": "Non riceverà più email a {{memberEmail}} quando qualcuno risponde ai tuoi commenti.",
     "{{memberEmail}} will no longer receive this newsletter.": "La newsletter non verrà più inviata a {{memberEmail}}.",
     "{{trialDays}} days free": "{{trialDays}} giorni gratis",
-    "+1 (123) 456-7890": "",
+    "+1 (123) 456-7890": "+39 021234567",
     "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Un link di accesso è stato inviato alla tua casella di posta. Se non lo ricevi entro 3 minuti, controlla nello spam.",
     "Account": "Account",
     "Account details updated successfully": "Dettagli dell'account aggiornati con successo",
@@ -31,7 +31,7 @@
     "Change plan": "Cambia piano",
     "Check spam & promotions folders": "Controlla nello spam",
     "Check with your mail provider": "Contatta il tuo provider di posta elettronica",
-    "Check your inbox to verify email update": "Controlla la tua casella di posta per verificare l’aggiornamento dell’email",
+    "Check your inbox to verify email update": "Controlla la tua casella di posta per verificare l'aggiornamento dell'email",
     "Choose": "Scegli",
     "Choose a different plan": "Scegli un piano differente",
     "Choose a plan": "Scegli un piano",
@@ -53,7 +53,7 @@
     "Create a new contact": "Crea un nuovo contatto",
     "Current plan": "Piano attuale",
     "Delete account": "Elimina account",
-    "Didn't mean to do this? Manage your preferences <button>here</button>.": "C’è qualcosa che non va? Gestisci <button>qui</button> le tue preferenze.",
+    "Didn't mean to do this? Manage your preferences <button>here</button>.": "C'è qualcosa che non va? Gestisci <button>qui</button> le tue preferenze.",
     "Don't have an account?": "Non hai un account?",
     "Edit": "Modifica",
     "Email": "Email",
@@ -68,18 +68,18 @@
     "Enter your name": "Inserisci il tuo nome",
     "Error": "Errore",
     "Expires {{expiryDate}}": "Scade il {{offerEndDate}}",
-    "Failed to cancel subscription, please try again": "La cancellazione dell’abbonamento non è riuscita, riprova, per favore",
+    "Failed to cancel subscription, please try again": "La cancellazione dell'abbonamento non è riuscita, riprova, per favore",
     "Failed to log in, please try again": "Accesso non riuscito, riprova, per favore",
     "Failed to log out, please try again": "La disconnessione non è riuscita, riprova, per favore",
-    "Failed to process checkout, please try again": "L’elaborazione del checkout non è riuscita, riprova, per favore",
-    "Failed to send magic link email": "L’invio dell’email con il magic link non è riuscito",
-    "Failed to send verification email": "L’invio dell’email di verifica non è riuscito",
+    "Failed to process checkout, please try again": "L'elaborazione del checkout non è riuscita, riprova, per favore",
+    "Failed to send magic link email": "L'invio dell'email con il magic link non è riuscito",
+    "Failed to send verification email": "L'invio dell'email di verifica non è riuscito",
     "Failed to sign up, please try again": "La registrazione non è riuscita, riprova, per favore",
-    "Failed to update account data": "L’aggiornamento dei dati dell’account non è riuscito",
-    "Failed to update account details": "L’aggiornamento dei dettagli dell’account non è riuscito",
-    "Failed to update billing information, please try again": "L’aggiornamento delle informazioni di fatturazione non è riuscito, riprova, per favore",
-    "Failed to update newsletter settings": "L’aggiornamento delle impostazioni della newsletter non è riuscito",
-    "Failed to update subscription, please try again": "L’aggiornamento dell’abbonamento non è riuscito, riprova per favore",
+    "Failed to update account data": "L'aggiornamento dei dati dell'account non è riuscito",
+    "Failed to update account details": "L'aggiornamento dei dettagli dell'account non è riuscito",
+    "Failed to update billing information, please try again": "L'aggiornamento delle informazioni di fatturazione non è riuscito, riprova, per favore",
+    "Failed to update newsletter settings": "L'aggiornamento delle impostazioni della newsletter non è riuscito",
+    "Failed to update subscription, please try again": "L'aggiornamento dell'abbonamento non è riuscito, riprova per favore",
     "Forever": "Per sempre",
     "Free Trial – Ends {{trialEnd}}": "Prova gratuita – finisce il {{trialEnd}}",
     "Get help": "Chiedi aiuto",
@@ -98,8 +98,8 @@
     "In the event a permanent failure is received when attempting to send a newsletter, emails will be disabled on the account.": "Nel caso in cui si verifichi un fallimento permanente durante l'invio di una newsletter, le email saranno disabilitate per quell'account.",
     "In your email client add {{senderEmail}} to your contacts list. This signals to your mail provider that emails sent from this address should be trusted.": "Nel tuo client di posta aggiungi {{senderEmail}} ai tuoi contatti. Così il tuo provider riconoscerà l'indirizzo come attendibile.",
     "Invalid email address": "Indirizzo e-mail non valido",
-    "Jamie Larson": "",
-    "jamie@example.com": "",
+    "Jamie Larson": "Andrea Rossi",
+    "jamie@example.com": "andrea.rossi@example.com",
     "Less like this": "Meno come questo",
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Assicurati che le email non finiscano per sbaglio nello spam. Se ce ne sono, clicca su \"Segnala come non spam\" e/o \"Sposta nella cartella Posta in arrivo\".",
     "Manage": "Impostazioni",
@@ -120,8 +120,8 @@
     "Permanent failure (bounce)": "Fallimento permanente (rimbalzo)",
     "Phone number": "Numero di telefono",
     "Plan": "Piano",
-    "Plan checkout was cancelled.": "Il pagamento dell’abbonamento è stato annullato.",
-    "Plan upgrade was cancelled.": "L’upgrade dell’abbonamento è stato annullato.",
+    "Plan checkout was cancelled.": "Il pagamento dell'abbonamento è stato annullato.",
+    "Plan upgrade was cancelled.": "L'upgrade dell'abbonamento è stato annullato.",
     "Please contact {{supportAddress}} to adjust your complimentary subscription.": "Si prega di contattare {{supportAddress}} per modificare l'abbonamento gratuito.",
     "Please enter {{fieldName}}": "Per favore inserisci {{fieldName}}",
     "Please fill in required fields": "Si prega di compilare i campi obbligatori",
@@ -153,7 +153,7 @@
     "Subscribed": "Abbonato",
     "Subscription plan updated successfully": "Piano di abbonamento aggiornato con successo",
     "Success": "Fatto",
-    "Success! Check your email for magic link to sign-in.": "Fatto! Controlla la tua email per il magic link d’accesso.",
+    "Success! Check your email for magic link to sign-in.": "Fatto! Controlla la tua email per il magic link d'accesso.",
     "Success! Your account is fully activated, you now have access to all content.": "Fatto! Il tuo account è stato attivato, ora hai accesso a tutti i contenuti.",
     "Success! Your email is updated.": "Fatto! La tua email è stata aggiornata.",
     "Successfully unsubscribed": "Disiscrizione effettuata con successo",
@@ -161,12 +161,12 @@
     "Thank you for your support": "Grazie per il tuo sostegno",
     "Thank you for your support!": "Grazie per il tuo sostegno!",
     "Thanks for the feedback!": "Grazie per il feedback!",
-    "That didn't go to plan": "C’è stato un errore",
+    "That didn't go to plan": "C'è stato un errore",
     "The email address we have for you is {{memberEmail}} — if that's not correct, you can update it in your <button>account settings area</button>.": "L'indirizzo email registrato è {{memberEmail}} — se non è corretto, puoi modificarlo nelle tue <button>impostazioni dell'account</button>.",
     "There was a problem submitting your feedback. Please try again a little later.": "C'è stato un errore durante l'invio del tuo feedback. Sei pregato di riprovare più tardi.",
     "There was an error cancelling your subscription, please try again.": "Si è verificato un errore durante la cancellazione del tuo abbonamento, riprova per favore.",
     "There was an error continuing your subscription, please try again.": "C'è stato un errore nella continuazione del tuo abbonamento, riprova per favore.",
-    "There was an error processing your payment. Please try again.": "C'è stato un errore durante l’elaborazione del tuo pagamento. Riprova per favore.",
+    "There was an error processing your payment. Please try again.": "C'è stato un errore durante l'elaborazione del tuo pagamento. Riprova per favore.",
     "There was an error sending the email, please try again": "C'è stato un errore nell'invio dell'e-mail, per favore riprova",
     "This site is invite-only, contact the owner for access.": "Questo sito è accessibile solo su invito, contatta il proprietario per poter accedere.",
     "This site is not accepting payments at the moment.": "Questo sito non accetta pagamenti al momento.",
