--- a/ghost/i18n/locales/it/ghost.json
+++ b/ghost/i18n/locales/it/ghost.json
@@ -2,15 +2,15 @@
     "All the best!": "A presto!",
     "Complete signup for {{siteTitle}}!": "Completa l'iscrizione a {{siteTitle}}!",
     "Complete your sign up to {{siteTitle}}!": "Completa la tua iscrizione a {{siteTitle}}!",
-    "Confirm email address": "Conferma l’indirizzo email",
-    "Confirm signup": "Conferma l’iscrizione",
+    "Confirm email address": "Conferma l'indirizzo email",
+    "Confirm signup": "Conferma l'iscrizione",
     "Confirm your email address": "Conferma il tuo indirizzo email",
     "Confirm your email update for {{siteTitle}}!": "Conferma l'aggiornamento della tua email per {{siteTitle}}!",
     "Confirm your subscription to {{siteTitle}}": "Conferma il tuo abbonamento a {{siteTitle}}",
-    "Device:": "",
+    "Device:": "Dispositivo",
     "For security verification, enter the code below to sign in to {{siteTitle}}:": "",
     "For your security, the link will expire in 24 hours time.": "Per la tua sicurezza, il link scadrà tra 24 ore.",
-    "Here's your code to login to {{siteTitle}}": "",
+    "Here's your code to login to {{siteTitle}}": "Ecco il tuo codice per accedere a {{siteTitle}}",
     "Hey there,": "Ciao,",
     "Hey there!": "Ciao!",
     "If you did not make this request, you can safely ignore this email.": "Se non hai fatto tu questa richiesta, puoi tranquillamente ignorare questa email.",
@@ -31,10 +31,10 @@
     "This email address will not be used.": "Questo indirizzo email non verrà utilizzato.",
     "Welcome back to {{siteTitle}}!": "Bentornato su {{siteTitle}}!",
     "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "Bentornato! Usa questo link per accedere in sicurezza al tuo account su {{siteTitle}}:",
-    "When:": "",
-    "Where:": "",
+    "When:": "Quando",
+    "Where:": "Dove",
     "You can also copy & paste this URL into your browser:": "Puoi anche copiare e incollare questo indirizzo direttamente nel tuo browser:",
-    "You just tried to access your account from a new device.": "",
+    "You just tried to access your account from a new device.": "Hai appena provato ad accedere al tuo account da un nuovo dispositivo.",
     "You will not be signed up, and no account will be created for you.": "Non verrai iscritto e non verrà creato alcun account a tuo nome.",
     "You will not be subscribed.": "Non sarai iscritto.",
     "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "Sei a un passo dall'abbonamento a {{siteTitle}} — conferma la tua email a questo link:",
