--- a/ghost/i18n/locales/mn/portal.json
+++ b/ghost/i18n/locales/mn/portal.json
@@ -10,7 +10,7 @@
     "{{memberEmail}} will no longer receive emails when someone replies to your comments.": "{{memberEmail}} хаяг руу таны сэтгэгдэлд хариу бичихэд имэйл ирэхгүй болно.",
     "{{memberEmail}} will no longer receive this newsletter.": "{{memberEmail}} хаяг руу энэ товхимол цаашид ирэхгүй болно.",
     "{{trialDays}} days free": "{{trialDays}} өдөр үнэгүй",
-    "+1 (123) 456-7890": "+1 (123) 456-7890",
+    "+1 (123) 456-7890": "+976 1234-5678",
     "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Таны имэйл рүү нэвтрэх холбоосыг илгээлээ. Хэрвээ 3 минутын дотор ирэхгүй бол спамаа шалгана уу.",
     "Account": "Бүртгэл",
     "Account details updated successfully": "Бүртгэлийн мэдээлэл амжилттай шинэчлэгдлээ",
@@ -98,8 +98,8 @@
     "In the event a permanent failure is received when attempting to send a newsletter, emails will be disabled on the account.": "Хэрвээ товхимолыг илгээхэд байнгын алдаа гарвал тухайн бүртгэлийн имэйл идэвхгүй болгогдоно.",
     "In your email client add {{senderEmail}} to your contacts list. This signals to your mail provider that emails sent from this address should be trusted.": "Имэйл програмдаа {{senderEmail}}-г харилцагчийн жагсаалтандаа нэмнэ. Энэ нь таны имэйл үйлчилгээ үзүүлэгчид энэ хаягаас илгээсэн имэйлүүдийг итгэмжтэй гэж үзэхэд тусална.",
     "Invalid email address": "Буруу имэйл хаяг",
-    "Jamie Larson": "Жэйми Ларсон",
-    "jamie@example.com": "jamie@example.com",
+    "Jamie Larson": "Доржийн Бат",
+    "jamie@example.com": "bat@example.com",
     "Less like this": "Таалагдсангүй",
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Имэйлүүд таны Спам эсвэл Промоушн хавтсанд орохгүй байгаа эсэхийг шалгана уу. Хэрэв тийм бол \"Спам биш гэж тэмдэглэх\" эсвэл \"Инбокс руу зөөх\" гэсэн сонголтыг хийнэ үү.",
     "Manage": "Удирдах",
