--- a/ghost/i18n/locales/vi/ghost.json
+++ b/ghost/i18n/locales/vi/ghost.json
@@ -7,7 +7,7 @@
     "Confirm your email address": "Nhập lại email",
     "Confirm your email update for {{siteTitle}}!": "Xác nhận cập nhật địa chỉ email của bạn trên {{siteTitle}}!",
     "Confirm your subscription to {{siteTitle}}": "Xác nhận bạn sẽ đăng ký {{siteTitle}}",
-    "Device:": "Thiết bị",
+    "Device:": "Thiết bị:",
     "For security verification, enter the code below to sign in to {{siteTitle}}:": "Để xác minh bảo mật, nhập mã bên dưới để đăng nhập {{siteTitle}}:",
     "For your security, the link will expire in 24 hours time.": "Để bảo mật, liên kết sẽ hết hạn trong vòng 24 giờ.",
     "Here's your code to login to {{siteTitle}}": "Đây là mã dùng để đăng nhập {{siteTitle}}",
@@ -31,13 +31,13 @@
     "This email address will not be used.": "Địa chỉ email này sẽ không còn sử dụng.",
     "Welcome back to {{siteTitle}}!": "Chào mừng quay lại {{siteTitle}}!",
     "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "Chào mừng quay lại! Sử dụng liên kết này để đăng nhập an toàn vào tài khoản {{siteTitle}} của bạn:",
-    "When:": "Thời gian",
-    "Where:": "Địa điểm",
+    "When:": "Thời gian:",
+    "Where:": "Địa điểm:",
     "You can also copy & paste this URL into your browser:": "Bạn cũng có thể sao chép và dán URL này vào trình duyệt:",
     "You just tried to access your account from a new device.": "Bạn vừa thử đăng nhập tài khoản từ một thiết bị mới.",
     "You will not be signed up, and no account will be created for you.": "Bạn sẽ không đăng ký và không tạo tài khoản.",
     "You will not be subscribed.": "Bạn sẽ không đăng ký gói.",
     "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "Còn một bước nữa để đăng ký {{siteTitle}} — vui lòng xác nhận địa chỉ email của bạn bằng liên kết này:",
     "You're one tap away from subscribing to {{siteTitle}}!": "Còn một bước nữa để đăng ký {{siteTitle}}!",
-    "Your verification code for {{siteTitle}}": "Mã xác minh {{siteTitle}}"
+    "Your verification code for {{siteTitle}}": "Mã xác minh cho {{siteTitle}}"
 }
