--- a/ghost/i18n/locales/da/portal.json
+++ b/ghost/i18n/locales/da/portal.json
@@ -176,10 +176,10 @@
     "Too many attempts try again in {{number}} days.": "For mange forsøg, prøv igen om {{number}} dage.",
     "Too many attempts try again in {{number}} hours.": "For mange forsøg, prøv igen om {{number}} timer.",
     "Too many attempts try again in {{number}} minutes.": "For mange forsøg, prøv igen om {{number}} minutter.",
-    "Too many different sign-in attempts, try again in {{number}} days": "For mange forskellige log-in forsøg, prøv igen om {{number}} dage.",
-    "Too many different sign-in attempts, try again in {{number}} hours": "For mange forskellige log-in forsøg, prøv igen om {{number}} timer.",
-    "Too many different sign-in attempts, try again in {{number}} minutes": "For mange forskellige log-in forsøg, prøv igen om {{number}} minutter.",
-    "Too many sign-up attempts, try again later": "For mange log-in forsøg, prøv venligst igen senere",
+    "Too many different sign-in attempts, try again in {{number}} days": "For mange forskellige loginforsøg, prøv igen om {{number}} dage.",
+    "Too many different sign-in attempts, try again in {{number}} hours": "For mange forskellige loginforsøg, prøv igen om {{number}} timer.",
+    "Too many different sign-in attempts, try again in {{number}} minutes": "For mange forskellige loginforsøg, prøv igen om {{number}} minutter.",
+    "Too many sign-up attempts, try again later": "For mange tilmeldingsforsøg, prøv venligst igen senere",
     "Try free for {{amount}} days, then {{originalPrice}}.": "Prøv gratis i {{amount}} dage, derefter {{original Price}}.",
     "Unable to initiate checkout session": "Kan ikke starte betalings-session",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Lås op for adgang til alle nyhedsbreve ved at blive en betalingsabonnent.",
