Responding to @knutid's feedback

--- a/ghost/i18n/locales/nb/comments.json
+++ b/ghost/i18n/locales/nb/comments.json
@@ -39,7 +39,7 @@
     "Local resident": "Lokal innbygger",
     "Member discussion": "Medlemsdiskusjon",
     "Name": "Navn",
-    "Neurosurgeon": "Neurokirurg",
+    "Neurosurgeon": "Nevrokirurg",
     "Once deleted, this comment can’t be recovered.": "",
     "One hour ago": "En time siden",
     "One min ago": "Ett minutt siden",
