Responding to cathysarisky's feedback

--- a/ghost/i18n/locales/nb/newsletter.json
+++ b/ghost/i18n/locales/nb/newsletter.json
@@ -7,10 +7,10 @@
     "Email": "E-post",
     "free": "gratis",
     "Keep reading": "Fortsett å lese",
-    "Less like this": "Mindre som ligner dette",
+    "Less like this": "Mindre som dette",
     "Manage subscription": "Administrer abonnement",
     "Member since": "Medlem siden",
-    "More like this": "Mer som ligner dette",
+    "More like this": "Mer som dette",
     "Name": "Navn",
     "paid": "betalt",
     "Subscription details": "Abonnementsdetaljer",
