--- a/ghost/i18n/locales/mn/ghost.json
+++ b/ghost/i18n/locales/mn/ghost.json
@@ -24,7 +24,7 @@
     "Sign in to {{siteTitle}}": "{{siteTitle}}-д нэвтрэх",
     "Sign in verification": "Нэвтрэх баталгаажуулалт",
     "Tap the link below to complete the signup process for {{siteTitle}}, and be automatically signed in:": "Доорх холбоосыг дарснаар {{siteTitle}} бүртгэлээ дуусгаж, автоматаар нэвтрэнэ:",
-    "Thank you for signing up to {{siteTitle}}!": "{{siteTitle}}-д бүтргүүлсэнд баярлалаа!",
+    "Thank you for signing up to {{siteTitle}}!": "{{siteTitle}}-д бүртгүүлсэнд баярлалаа!",
     "Thank you for subscribing to {{siteTitle}}!": "{{siteTitle}}-д захиалга өгсөнд баярлалаа!",
     "Thank you for subscribing to {{siteTitle}}.": "{{siteTitle}}-д захиалга өгсөнд баярлалаа.",
     "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "{{siteTitle}}-д захиалга өгсөнд баярлалаа. Доорх холбоосыг дарснаар автоматаар нэвтрэнэ:",
