Fix i18n issue on `can't`

--- a/ghost/i18n/locales/mn/comments.json
+++ b/ghost/i18n/locales/mn/comments.json
@@ -40,7 +40,7 @@
     "Member discussion": "Гишүүдийн хэлэлцүүлэг",
     "Name": "Нэр",
     "Neurosurgeon": "Мэдрэлийн мэс засалч",
-    "Once deleted, this comment can't be recovered.": "Устгасны дараа энэ сэтгэгдлийг сэргээх боломжгүй.",
+    "Once deleted, this comment can’t be recovered.": "Устгасны дараа энэ сэтгэгдлийг сэргээх боломжгүй.",
     "One hour ago": "Нэг цагийн өмнө",
     "One min ago": "Нэг минутын өмнө",
     "removed": "хасагдсан",
