Updated Norwegian Bokmål translations and fixed ISO code (#22194)
ref https://github.com/i18next/i18next/pull/870
ref https://github.com/i18next/i18next/blob/e3d66d0eade4d1e47afd545339664ae3a5fd09eb/CHANGELOG.md?plain=1#L1613

- Some of the translations in the Norwegian Bokmål had clumsy and non-colloquial wording: 
  they read like english sentences run through google translate.
- Some new English JSON keys have been introduced which were missing a Norwegian translation. 
 I added the missing translations.
- `no` is not the correct ISO language code for Norwegian Bokmål. At best, `no` is an alias for `nb` (Norsk Bokmål).
 I introduced the `nb` folder for Norsk Bokmål as it is more correct, and matches closer with what i18n calls the language.

### Why does this matter?
- Treating `no` as the same as `nb` is actually an accidental political statement. 
Its basically saying that `Norwegian written Language` == `Norwegian Bokmål`, 
which is not true. `Norwegian Bokmål` and `Norwegian Nynorsk` are just as valid under Norwegian law.
- `nn` and `nb` are equally valid.
- i18n doesn't treat `no` as `nb`.
- If we want to retain the previous behaviour and prevent regressions, simply need to add the "no" as a fallback.


---------

Co-authored-by: Benjamin <benjamin@systorvest.no>

--- a/ghost/i18n/locales/nb/portal.json
+++ b/ghost/i18n/locales/nb/portal.json
@@ -38,7 +38,7 @@
     "Choose your newsletters": "Velg nyhetsbrev",
     "Click here to retry": "Klikk her for å prøve igjen",
     "Close": "Lukk",
-    "Comment preferences updated.": "",
+    "Comment preferences updated.": "Innstillingene for kommentarer ble oppdatert.",
     "Comments": "Kommentarer",
     "Complimentary": "Gratis",
     "Confirm": "Bekreft",
@@ -60,7 +60,7 @@
     "Email newsletter": "E-postnyhetsbrev",
     "Email newsletter settings updated": "Innstillinger for e-postnyhetsbrev oppdatert",
     "Email preferences": "E-postinnstillinger",
-    "Email preferences updated.": "",
+    "Email preferences updated.": "E-postinnstillinger oppdatert",
     "Emails": "E-poster",
     "Emails disabled": "E-poster deaktivert",
     "Ends {{offerEndDate}}": "Avsluttes {{offerEndDate}}",
@@ -140,7 +140,7 @@
     "Sign out": "Logg ut",
     "Sign up": "Opprett bruker",
     "Signup error: Invalid link": "Feil ved registrering: Ugyldig lenke",
-    "Signups from this email domain are currently restricted.": "",
+    "Signups from this email domain are currently restricted.": "Registrering fra dette e-postdomenet er utilgjengelig for øyeblikket.",
     "Something went wrong, please try again later.": "Noe gikk galt. Prøv igjen senere.",
     "Sorry, no recommendations are available right now.": "Beklager, ingen anbefalinger er tilgjengelige for øyeblikket.",
     "Sorry, that didn’t work.": "Beklager, det fungerte ikke",
@@ -170,7 +170,7 @@
     "There was an error sending the email, please try again": "En feil oppstod ved sending av e-posten, vennligst prøv igjen",
     "This site is invite-only, contact the owner for access.": "Denne nettsiden er kun for inviterte. Kontakt eieren for invitasjon.",
     "This site is not accepting payments at the moment.": "Denne nettsiden godtar ikke betalinger for øyeblikket.",
-    "This site only accepts paid members.": "",
+    "This site only accepts paid members.": "Denne nettsiden er kun for betalende medlemmer.",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "For å fullføre registreringen, klikk på bekreftelseslenken i innboksen din. Hvis den ikke kommer innen 3 minutter, må du sjekke søppelposten din!",
     "To continue to stay up to date, subscribe to {{publication}} below.": "For å fortsette å holde deg oppdatert, abonner på {{publication}} nedenfor.",
     "Too many attempts try again in {{number}} days.": "For mange forsøk, prøv igjen om {{number}} dager.",
@@ -179,7 +179,7 @@
     "Too many different sign-in attempts, try again in {{number}} days": "For mange påloggingsforsøk, prøv igjen om {{number}} dager.",
     "Too many different sign-in attempts, try again in {{number}} hours": "For mange påloggingsforsøk, prøv igjen om {{number}} timer.",
     "Too many different sign-in attempts, try again in {{number}} minutes": "For mange påloggingsforsøk, prøv igjen om {{number}} minutter.",
-    "Too many sign-up attempts, try again later": "",
+    "Too many sign-up attempts, try again later": "For mange registreringsforsøk, prøv igjen senere",
     "Try free for {{amount}} days, then {{originalPrice}}.": "Prøv gratis i {{amount}} dager, deretter {{originalPrice}}.",
     "Unable to initiate checkout session": "Kunne ikke starte utsjekkingssesjon",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Få tilgang til alle nyhetsbrev ved å bli betalende abonnent.",
