--- a/ghost/i18n/locales/nb/ghost.json
+++ b/ghost/i18n/locales/nb/ghost.json
@@ -4,17 +4,17 @@
     "Complete your sign up to {{siteTitle}}!": "Fullfør registreringen din på {{siteTitle}}!",
     "Confirm email address": "Bekreft e-postadresse",
     "Confirm signup": "Bekreft registrering",
-    "Confirm your email address": "Bekreft din e-postadresse",
+    "Confirm your email address": "Bekreft e-postadressen din",
     "Confirm your email update for {{siteTitle}}!": "Bekreft e-postoppdateringen din for {{siteTitle}}!",
     "Confirm your subscription to {{siteTitle}}": "Bekreft abonnementet ditt på {{siteTitle}}",
     "Device:": "",
     "For security verification, enter the code below to sign in to {{siteTitle}}:": "",
-    "For your security, the link will expire in 24 hours time.": "For din sikkerhet vil denne lenken utløpe om 24 timer.",
+    "For your security, the link will expire in 24 hours time.": "Denne lenken utløper om 24 timer av sikkerhetshensyn.",
     "Here's your code to login to {{siteTitle}}": "",
     "Hey there,": "Hei,",
     "Hey there!": "Hei!",
     "If you did not make this request, you can safely ignore this email.": "Hvis du ikke har bedt om dette, kan du trygt ignorere denne e-posten.",
-    "If you did not make this request, you can simply delete this message.": "Hvis du ikke har bedt om dette, kan du enkelt slette denne meldingen.",
+    "If you did not make this request, you can simply delete this message.": "Hvis du ikke har bedt om dette, kan du fint slette denne meldingen.",
     "If you didn't try to sign in recently, you can safely ignore this email to deny access.": "",
     "Please confirm your email address with this link:": "Vennligst bekreft e-postadressen din med denne lenken:",
     "Secure sign in link for {{siteTitle}}": "Sikker påloggingslenke for {{siteTitle}}",
@@ -36,7 +36,7 @@
     "You can also copy & paste this URL into your browser:": "Du kan også kopiere og lime inn denne URL-en i nettleseren din:",
     "You just tried to access your account from a new device.": "",
     "You will not be signed up, and no account will be created for you.": "Du vil ikke bli registrert, og ingen konto vil bli opprettet for deg.",
-    "You will not be subscribed.": "Du vil ikke bli meldt på.",
+    "You will not be subscribed.": "Du vil ikke bli meldt på som abonnent.",
     "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "Du er ett klikk unna å abonnere på {{siteTitle}} — bekreft e-postadressen din med denne lenken:",
     "You're one tap away from subscribing to {{siteTitle}}!": "Du er ett klikk unna å abonnere på {{siteTitle}}!",
     "Your verification code for {{siteTitle}}": ""
