--- a/ghost/i18n/locales/nb/newsletter.json
+++ b/ghost/i18n/locales/nb/newsletter.json
@@ -20,7 +20,7 @@
     "Upgrade to continue reading.": "",
     "View in browser": "Vis i nettleser",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Du mottar dette fordi du er en <strong>%%{status}%% abonnent</strong> på {site}.",
-    "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "Din gratis prøveperiode avsluttes {date}, da blir du belastet normal pris. Du kan alltid kansellere før den tid.",
+    "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "Din gratis prøveperiode avsluttes den {date}, da blir du belastet med normal pris. Du kan alltid kansellere før den tid.",
     "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "Abonnementet ditt er kansellert og utløper den {date}. Du kan gjenoppta abonnementet via kontoinnstillingene dine.",
     "Your subscription has expired.": "Abonnementet ditt er utløpt.",
     "Your subscription will expire on {date}.": "Abonnementet ditt vil utløpe den {date}.",
