--- a/ghost/i18n/locales/de/comments.json
+++ b/ghost/i18n/locales/de/comments.json
@@ -13,6 +13,7 @@
     "Are you sure?": "Bist du sicher?",
     "Become a member of {{publication}} to start commenting.": "Werde Mitglied bei {{publication}}, um Kommentare zu schreiben.",
     "Become a paid member of {{publication}} to start commenting.": "Werde zahlendes Mitglied bei {{publication}}, um Kommentare zu schreiben.",
+    "Best": "Beste",
     "Cancel": "Abbrechen",
     "Comment": "Kommentar",
     "Complete your profile": "Vervollständige dein Profil",
@@ -40,6 +41,8 @@
     "Member discussion": "Mitgliederdiskussion",
     "Name": "Name",
     "Neurosurgeon": "Neurochirurg",
+    "Newest": "Neuste",
+    "Oldest": "Älteste",
     "Once deleted, this comment can’t be recovered.": "Der Kommentar kann nicht wiederhergestellt werden, sobald er gelöscht wurde.",
     "One hour ago": "Vor einer Stunde",
     "One min ago": "Vor einer Minute",
