🌐 Updated Polish translation - fixes part 2

--- a/ghost/i18n/locales/pl/comments.json
+++ b/ghost/i18n/locales/pl/comments.json
@@ -44,7 +44,7 @@
     "One hour ago": "Godzinę temu",
     "One min ago": "Minutę temu",
     "removed": "usunięte",
-    "Replied to": "Odpowiedziano do",
+    "Replied to": "Odpowiedź na",
     "Reply": "Odpowiedz",
     "Reply to": "Odpowiedz na",
     "Reply to comment": "Napisz odpowiedź do komentarza",
