--- a/ghost/i18n/locales/pl/ghost.json
+++ b/ghost/i18n/locales/pl/ghost.json
@@ -34,7 +34,7 @@
     "When:": "Kiedy",
     "Where:": "Gdzie",
     "You can also copy & paste this URL into your browser:": "Możesz również skopiować i wkleić ten adres URL w swojej przeglądarce internetowej:",
-    "You just tried to access your account from a new device.": "Właśnie próbowałeś uzyskać dostęp do konta z nowego urządzenia",
+    "You just tried to access your account from a new device.": "Właśnie próbowałeś uzyskać dostęp do konta z nowego urządzenia.",
     "You will not be signed up, and no account will be created for you.": "Nie zostaniesz zarejestrowany i Twoje konto nie zostanie utworzone.",
     "You will not be subscribed.": "Nie zostaniesz zapisany.",
     "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "Jesteś jedno kliknięcie od zapisania się do {{siteTitle}} - potwierdź proszę adres email tym linkiem:",
