--- a/ghost/i18n/locales/pl/newsletter.json
+++ b/ghost/i18n/locales/pl/newsletter.json
@@ -3,21 +3,21 @@
     "Become a paid member of {site} to get access to all premium content.": "Zostań płatnym członkiem {site}, aby uzyskać dostęp do wszystkich treści premium.",
     "By {authors}": "Przez {authors}",
     "Comment": "Komentarz",
-    "complimentary": "bezpłatny",
+    "complimentary": "bezpłatnym",
     "Email": "Email",
-    "free": "darmowy",
+    "free": "darmowym",
     "Keep reading": "Czytaj dalej",
     "Less like this": "Mniej w tym stylu",
     "Manage subscription": "Zarządzaj subskrypcją",
     "Member since": "Członek od",
     "More like this": "Więcej w tym stylu",
     "Name": "Imię",
-    "paid": "płatne",
+    "paid": "płatnym",
     "Subscription details": "Szczegóły subskrypcji",
-    "trialing": "wersja próbna",
+    "trialing": "próbnym",
     "Unsubscribe": "Zrezygnuj z subskrypcji",
-    "Upgrade": "Podnieś poziom",
-    "Upgrade to continue reading.": "Podnieś poziom subskrypcji aby kontynuowac czytanie",
+    "Upgrade": "Ulepsz",
+    "Upgrade to continue reading.": "Podnieś poziom subskrypcji, aby kontynuować czytanie.",
     "View in browser": "Zobacz w przeglądarce",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Otrzymujesz tę wiadomość, ponieważ jesteś <strong>%%{status}%% subskrybentem</strong> witryny {site}.",
     "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "Twój bezpłatny okres próbny kończy się {date}, w którym to czasie zostaniesz obciążony standardową ceną. Zawsze możesz anulować przed tym terminem.",
